--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,6 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.9"
-cgmath = "0.18.0"
+bevy_prototype_debug_lines = { version = "0.9.0", features = ["3d"] }
+lerp = "0.4.0"
+parry3d = "0.13.4"
