--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,11 @@ edition = "2021"
 [dependencies]
 bevy = "0.9"
 bevy_prototype_debug_lines = { version = "0.9.0", features = ["3d"] }
+derive_setters = "0.1.5"
 lerp = "0.4.0"
 parry3d = "0.13.4"
+rand = "0.8.5"
+
+[profile.dev]
+opt-level = 1
+debug = true
